<resources>
    <string name="app_name">Pocket Traveler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_content">udi u main</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_destination_info">DestinationInfoActivity</string>
    <string name="title_activity_pay">PayActivity</string>


    <!-- login -->
    <string name="loginMain">Login </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="loginAnonymous">Anonymous login </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_temp_start">TempStartActivity</string>


    <!-- registration and settings-->
    <string name="Email">Email </string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>




</resources>
