<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tscanner.msquared.hr.travelscanner.activities.RegistrationActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TravelerSubtitleText"
                    android:layout_marginTop="20dp"
                    android:text="@string/Username"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/usernameS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TravelerEditTextStyle"
                    android:hint="Username"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textViewEmailS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TravelerSubtitleText"
                    android:text="@string/Email"
                    android:layout_marginTop="12dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <AutoCompleteTextView
                    android:id="@+id/emailS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TravelerEditTextStyle"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/textViewPassword1S"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TravelerSubtitleText"
                    android:text="@string/Password"
                    android:layout_marginTop="12dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/passwordS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TravelerEditTextStyle"
                    android:hint="New password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:password="false"
                    android:gravity="center" />


                <EditText
                    android:id="@+id/passwordRepeatS"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TravelerEditTextStyle"
                    android:hint="Repeat password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginTop="12dp"
                    android:password="false"
                    android:gravity="center" />


                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/saveFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    fab:fab_showShadow="false"
                    android:src="@drawable/ic_navigation_check"
                    fab:fab_colorNormal="@color/traveler_primary"
                    fab:fab_colorPressed="@color/traveler_primary"
                    fab:fab_colorRipple="@color/traveler_primary"
                    fab:fab_label="Login"
                    android:layout_gravity="right"
                    android:layout_marginTop="40dp" />

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</LinearLayout>
